# rust-projects

actix-webserver/: Cargo.toml  database.json
actix-webserver/src/: main.rs
auto-gpt/: .env  Cargo.toml
auto-gpt/src/: main.rs
auto-gpt/src/helpers/: command_line.rs
compress_file/: Cargo.toml
compress_file/src/: main.rs
csv_reader/src/: main.rs
decompress-file/: Cargo.toml
decompress-file/src/: main.rs
mandelbrot_set/: Cargo.toml
mandelbrot_set/src/: lib.rs  main.rs
simple-blockchain/: Cargo.toml
simple-blockchain/src/: main.rs
web-scraper/: Cargo.toml
web-scraper/src/: main.rs
